Bug 146024 - Zooming in/out or scrolling/up down with insanely large canvas very slow with Skia Raster
Summary: Zooming in/out or scrolling/up down with insanely large canvas very slow with...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords:
Depends on:
Blocks: Scrolling-Performance
  Show dependency treegraph
 
Reported: 2021-12-03 10:35 UTC by Telesto
Modified: 2021-12-04 15:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2021-12-03 10:35:24 UTC
Description:
Zooming in/out or scrolling/up down with insanely large canvas very slow with Skia Raster

Steps to Reproduce:
1. Open attachment 176672 [details]
2. Scroll up down (scroll wheel or dragging) or left right (dragging) or zoom in out with CTRL+scrollwheel

FWIW: didn't check Vulkan (not supported on my system) 

Actual Results:
Lagging

Expected Results:
Smooth like 7.0 or GDI


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
7.4

and in
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 47fda617fc4dad8273919227ca45ea3b8b61aea1
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

Fine with
Version: 7.0.0.0.beta1+ (x64)
Build ID: 2891e91a513520d68ea2b8c59c14335861a15253
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 V Stuart Foote 2021-12-03 15:36:09 UTC
Can not confirm on this single page writer document with a 794px x 1123px radial gradient PNG image anchored to paragraph---neither with Zoom in/out nor on pan around page (scroll bar l, r, u, d arrow, or by grabbing the thumb slider); while Writer 'Smooth scroll' enabled or disabled has no noticeable "slowness" or lag on this Windows 10 system. Adjusted image anchor to page and no different. Also recreated document size but used image as imported bitmap background. No issue.

Skia/Vulkan is very zippy
Skia/Raster is smooth
CPU w/HA is a bit slower
CPU GDI+ only about the same

But no apparent issues with speed of rendering with the Skia libs.

The 'Smooth scrool' buffering does have some visual glitches as the scroll (v or  h advances) but think that is bug 123181

=-testing-=

Version: 7.2.3.2 (x64) / LibreOffice Community
Build ID: d166454616c1632304285822f9c83ce2e660fd92
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

with this display/GPU info from MSinfo32.exe

Name	Intel(R) Iris(R) Plus Graphics
PNP Device ID	PCI\VEN_8086&DEV_8A52&SUBSYS_C189144D&REV_07\3&11583659&0&10
Adapter Type	Intel(R) Iris(R) Graphics Family, Intel Corporation compatible
Adapter Description	Intel(R) Iris(R) Plus Graphics
Adapter RAM	1.00 GB (1,073,741,824 bytes)
Installed Drivers	C:\WINDOWS\System32\DriverStore\FileRepository\iigd_dch.inf_amd64_6c531da99dfd5830\igdumdim64.dll,C:\WINDOWS\System32\DriverStore\FileRepository\iigd_dch.inf_amd64_6c531da99dfd5830\igd10iumd64.dll,C:\WINDOWS\System32\DriverStore\FileRepository\iigd_dch.inf_amd64_6c531da99dfd5830\igd10iumd64.dll,C:\WINDOWS\System32\DriverStore\FileRepository\iigd_dch.inf_amd64_6c531da99dfd5830\igd12umd64.dll
Driver Version	30.0.101.1069
INF File	oem7.inf (iICLD_w10_DS_N section)
Color Planes	Not Available
Color Table Entries	4294967296
Resolution	1920 x 1080 x 60 hertz


or when in Skia / Vulkan mode

RenderMethod: vulkan
Vendor: 0x8086
Device: 0x8a52
API: 1.2.195
Driver: 0.404.1069
DeviceType: integrated
DeviceName: Intel(R) Iris(R) Plus Graphics
Denylisted: no
Comment 2 Telesto 2021-12-03 16:33:46 UTC
Me really confused.. Appears I mixed up different versions of LibreOffice
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ddc57169ac8d1de00403dbb09fef5221beaa0f3d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

Sorry for the noise..
Comment 3 Telesto 2021-12-03 19:05:47 UTC
Well zooming in an dragging left/right still consumes much CPU
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: ddc57169ac8d1de00403dbb09fef5221beaa0f3d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

And noticing a commit in gerrit
Comment 4 Commit Notification 2021-12-04 10:31:31 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0a596fbd94e1750e9d1f5cdab624c719b33c3ab4

only bilinear+mipmap for Skia/raster to-screen drawing (tdf#146024)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-12-04 12:27:58 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/60b195cd41f93fc24bfb7897bde20ac3cbeadd1f

only bilinear+mipmap for Skia/raster to-screen drawing (tdf#146024)

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.